<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    android:background="#ffffff"


    >


    <ImageView
        android:id="@+id/profileImg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_weight="3"
        android:padding="60dp"
        android:scaleType="centerCrop"
        android:src="@drawable/alvin"
        android:textAlignment="viewEnd" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/name"
        android:padding="20dp"
        android:textFontWeight="10"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp"
        android:gravity="center"

        />

    <TextView
        android:id="@+id/track"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/track"
        android:padding="20dp"
        android:textFontWeight="10"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/Country"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/country"
        android:padding="20dp"
        android:textFontWeight="10"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/email"
        android:padding="20dp"
        android:textFontWeight="10"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/PhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/number"
        android:padding="20dp"
        android:textFontWeight="10"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp"
        />



</LinearLayout>